管理者のURLを貼った

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,6 +95,7 @@
 
     </tbody>
   </table>
+  <a href="/admin">管理者はこちら。（パスワードが必要です）</a>
   <script src="/javascripts/main.js"></script>
   </body>
 </html>
